--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,33 +44,64 @@ table {
 	border-spacing: 0;
 }
 /* navbar ---------------------------------- */
-.navbar {
-    height: 54px;
-    max-width: 935px;
-    margin: 0 auto;
+header {
+    
+    width: 100vw;
     position: fixed;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     top: 0;
     left: 0;
     border-bottom: 1px solid rgba(219, 219, 219, 1);
 }
-
-.navbar > img {
-    width: 103px;
-    height: 29px;
+.navbar {
+    height: 54px;
+    max-width: 935px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.nav-links ul {
+.navbar > a img {
+    width: 103px;
+    height: 29px;
+    margin-top: 5px;
+}
+
+.nav-links {
     list-style: none;
     display: flex;
 }
 
+.nav-links li {
+    list-style: none;
+    margin-left: 20px;
+}
+
+.nav-links li a {
+    font-size: 22px;
+    align-items: center;
+    color: black;
+    display: flex;
+    align-items: center
+}
+
+.nav-links li a:hover {
+    color: #139EF2
+}
+
 @media (max-width: 935px) {
+    .navbar {
+        margin: 0 36px;
+    }
 
 }
 
 @media (max-width: 614px) {
-    
+    .navbar {
+        justify-content: center;
+    }
+
+    .nav-links {
+        display: none;
+    }
 }
